# Visual-Intelligence

./: .gitignore  CMakeLists.txt  README.md
src/: freenect-playback-wrapper.cpp  freenect-playback-wrapper.h  main.cpp  opencvexample.cpp
